--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@envelop/live-query": "^5.0.6",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-yoga": "^3.8.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
+    "stripe": "^12.9.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
